assets/scss/custom.scss
:root {
    --blue: #007bff;
    --indigo: #6610f2;
    --purple: #6f42c1;
    --pink: #e83e8c;
    --red: #dc3545;
    --orange: #fd7e14;
    --yellow: #ffc107;
    --green: #28a745;
    --teal: #20c997;
    --cyan: #17a2b8;
    --white: #fff;
    --gray: #6c757d;
    --gray-dark: #343a40;
    --primary: #1565c0;
    --secondary: #6c757d;
    --success: #28a745;
    --info: #17a2b8;
    --warning: #ffc107;
    --danger: #dc3545;
    --light: #f8f9fa;
    --dark: #343a40;
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
        "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
        "Noto Color Emoji";
}

.skills {
    width: 100%;
    max-width: 600px;
    padding: 0 20px;
}

.skill-name {
    font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
    margin: 20px 0;
}

.skill-bar {
    height: 14px;
    background: var(--light);
    border-radius: 3px;
    box-shadow: 5px 5px 10px var(--dark);
}

.skill-per {
    height: 14px;
    background: var(--primary);
    border-radius: 3px;
    position: relative;
    animation: fillBars 2.5s 1;
}


@keyframes fillBars {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

.fun {
    height: 60px;
}

.amanox {
    position: center;
    width: 50%;
    animation-duration: 3s;
    animation-name: amanox;
    animation-timing-function: ease-out;
    animation-iteration-count: 1;
  }
  
  @keyframes amanox {
    from {
      margin-left: 50%;
      width: 10%;
    }
  
    to {
      margin-left: 0%;
      width: 50%;
    }
  }

